--- a/kitty.conf
+++ b/kitty.conf
@@ -21,10 +21,11 @@ inactive_tab_background #999
 # Hide everything. On Mac this hides the titlebar.
 hide_window_decorations titlebar-only
 
-map kitty_mod+r set_tab_title
+map kitty_mod+y set_tab_title
 map kitty_mod+v paste_from_clipboard
 map kitty_mod+s paste_from_selection
 map kitty_mod+o pass_selection_to_program
+map kitty_mod+r start_resizing_window
 
 # Create a new window splitting the space used by the existing one so that
 # the two windows are placed one above the other
