--- a/kitty.conf
+++ b/kitty.conf
@@ -18,9 +18,6 @@ active_tab_background #eee
 inactive_tab_foreground #444
 inactive_tab_background #999
 
-# Hide everything. On Mac this hides the titlebar.
-hide_window_decorations titlebar-only
-
 map kitty_mod+y set_tab_title
 map kitty_mod+v paste_from_clipboard
 map kitty_mod+s paste_from_selection
@@ -44,6 +41,15 @@ map kitty_mod+left neighboring_window left
 map kitty_mod+right neighboring_window right
 map kitty_mod+up neighboring_window up
 map kitty_mod+down neighboring_window down
+
+map ctrl+tab next_tab
+map ctrl+shift+tab previous_tab
+
+map kitty_mod+1 goto_tab 1
+map kitty_mod+2 goto_tab 2
+map kitty_mod+3 goto_tab 3
+map kitty_mod+4 goto_tab 4
+map kitty_mod+5 goto_tab 5
 
 # The below sets the theme to gruvbox
 #  cursor                  #928374
