--- a/kitty.conf
+++ b/kitty.conf
@@ -51,6 +51,15 @@ map kitty_mod+3 goto_tab 3
 map kitty_mod+4 goto_tab 4
 map kitty_mod+5 goto_tab 5
 
+# Increase font size 
+map ctrl+shift+equal change_font_size all +2.0
+map ctrl+shift+plus change_font_size all +2.0
+map ctrl+shift+kp_add change_font_size all +2.0
+
+# Decrease font size 
+map ctrl+shift+minus change_font_size all -2.0
+map ctrl+shift+kp_subtract change_font_size all -2.0
+
 # The below sets the theme to gruvbox
 #  cursor                  #928374
 background              #282828
