--- a/kitty.conf
+++ b/kitty.conf
@@ -60,6 +60,8 @@ map ctrl+shift+kp_add change_font_size all +2.0
 map ctrl+shift+minus change_font_size all -2.0
 map ctrl+shift+kp_subtract change_font_size all -2.0
 
+enabled_layouts splits
+
 # The below sets the theme to gruvbox
 #  cursor                  #928374
 background              #282828
