--- a/kitty.conf
+++ b/kitty.conf
@@ -24,14 +24,6 @@ map kitty_mod+s paste_from_selection
 map kitty_mod+o pass_selection_to_program
 map kitty_mod+r start_resizing_window
 
-# Create a new window splitting the space used by the existing one so that
-# the two windows are placed one above the other
-map kitty_mod+h launch --location=hsplit
-
-# Create a new window splitting the space used by the existing one so that
-# the two windows are placed side by side
-map kitty_mod+v launch --location=vsplit
-
 # Rotate the current split, changing its split axis from vertical to
 # horizontal or vice versa
 map f7 layout_action rotate
@@ -60,9 +52,19 @@ map ctrl+shift+kp_add change_font_size all +2.0
 map ctrl+shift+minus change_font_size all -2.0
 map ctrl+shift+kp_subtract change_font_size all -2.0
 
+# By default I only use the splits layout as its the most flexible.
+# Use kitty_mod + h/v for creating splits.
 enabled_layouts splits
 
-# The below sets the theme to gruvbox
+map kitty_mod+h launch --location=hsplit
+map kitty_mod+v launch --location=vsplit
+
+
+
+########################
+# Gruvbox Color scheme #
+########################
+
 #  cursor                  #928374
 background              #282828
 foreground              #fbf1c7
