--- a/kitty.conf
+++ b/kitty.conf
@@ -1,3 +1,5 @@
+include ./theme.conf
+
 # vim:fileencoding=utf-8:foldmethod=marker
 
 kitty_mod ctrl+shift
@@ -58,47 +60,3 @@ enabled_layouts splits
 
 map kitty_mod+h launch --location=hsplit
 map kitty_mod+v launch --location=vsplit
-
-
-
-########################
-# Gruvbox Color scheme #
-########################
-
-#  cursor                  #928374
-background              #282828
-foreground              #fbf1c7
-selection_foreground    #928374
-selection_background    #ebdbb2
-
-# black
-color0                  #282828
-color8                  #7c6f64
-
-# red
-color1                  #cc241d
-color9                  #fb4934
-
-#: green
-color2                  #98971a
-color10                 #b8bb26
-
-# yellow
-color3                  #d79921
-color11                 #fabd2f
-
-# blue
-color4                  #458588
-color12                 #83a598
-
-# purple
-color5                  #b16286
-color13                 #d3869b
-
-# aqua
-color6                  #689d6a
-color14                 #8ec07c
-
-# white
-color7                  #a89984
-color15                 #fbf1c7
