--- a/kitty.conf
+++ b/kitty.conf
@@ -1,10 +1,13 @@
 include ./theme.conf
 
 # vim:fileencoding=utf-8:foldmethod=marker
-
 kitty_mod ctrl+shift
 allow_hyperlinks yes
 
+# show tabs on top
+tab_bar_edge top
+
+tab_title_template "{title} ({index})"
 
 # All of my specific configs:
 font_family      0xProto Nerd Font # My preferred choice
@@ -15,10 +18,10 @@ active_border_color #ffffff
 # The color for the border of inactive windows
 inactive_border_color #cccccc
 
-active_tab_foreground #000
-active_tab_background #eee
-inactive_tab_foreground #444
-inactive_tab_background #999
+active_tab_foreground #710cf3
+active_tab_background #a777fc
+inactive_tab_foreground #8f6897
+inactive_tab_background #5f4d64
 
 map kitty_mod+y set_tab_title
 map kitty_mod+v paste_from_clipboard
@@ -29,6 +32,9 @@ map kitty_mod+r start_resizing_window
 # Rotate the current split, changing its split axis from vertical to
 # horizontal or vice versa
 map f7 layout_action rotate
+
+map alt+c copy_to_clipboard
+map alt+v paste_from_clipboard
 
 # Switch focus to the neighboring window in the indicated direction
 map kitty_mod+left neighboring_window left
