--- a/kitty.conf
+++ b/kitty.conf
@@ -10,7 +10,7 @@ tab_bar_edge top
 tab_title_template "{title} ({index})"
 
 # All of my specific configs:
-font_family      0xProto Nerd Font # My preferred choice
+font_family      JetBrainsMono Nerd Font # My preferred choice
 
 # The color for the border of the active window
 active_border_color #ffffff
