--- a/kitty.conf
+++ b/kitty.conf
@@ -6,8 +6,9 @@ allow_hyperlinks yes
 
 # show tabs on top
 tab_bar_edge top
-
-tab_title_template "{title} ({index})"
+tab_title_template "{index} | {title}"
+tab_bar_style       slant 
+# tab_powerline_style round
 
 # All of my specific configs:
 font_family      JetBrainsMono Nerd Font # My preferred choice
@@ -18,10 +19,10 @@ active_border_color #ffffff
 # The color for the border of inactive windows
 inactive_border_color #cccccc
 
-active_tab_foreground #710cf3
-active_tab_background #a777fc
-inactive_tab_foreground #8f6897
-inactive_tab_background #5f4d64
+active_tab_foreground #7b390c
+active_tab_background #eabc15
+inactive_tab_foreground #1d1402
+inactive_tab_background #815a09
 
 map kitty_mod+y set_tab_title
 map kitty_mod+v paste_from_clipboard
