--- a/kitty.conf
+++ b/kitty.conf
@@ -4,11 +4,15 @@ include ./theme.conf
 kitty_mod ctrl+shift
 allow_hyperlinks yes
 
+macos_titlebar_color background
+
+# I prefer my terminal to NOT make sound thank you very much
+enable_audio_bell no
+
 # show tabs on top
 tab_bar_edge top
 tab_title_template "{index} | {title}"
 tab_bar_style       slant 
-# tab_powerline_style round
 
 # All of my specific configs:
 font_family      JetBrainsMono Nerd Font # My preferred choice
@@ -37,14 +41,25 @@ map f7 layout_action rotate
 map alt+c copy_to_clipboard
 map alt+v paste_from_clipboard
 
+# jump to beginning and end of word
+map alt+left send_text all \x1b\x62
+map alt+right send_text all \x1b\x66
+
 # Switch focus to the neighboring window in the indicated direction
 map kitty_mod+left neighboring_window left
 map kitty_mod+right neighboring_window right
 map kitty_mod+up neighboring_window up
 map kitty_mod+down neighboring_window down
 
+# clear the terminal screen
+map kitty_mod+k combine : clear_terminal scrollback active : send_text normal,application \x0c
+
+# More tab management
 map ctrl+tab next_tab
 map ctrl+shift+tab previous_tab
+
+map ctrl+shift+right next_tab
+map ctrl+shift+left previous_tab
 
 map kitty_mod+1 goto_tab 1
 map kitty_mod+2 goto_tab 2
@@ -65,5 +80,5 @@ map ctrl+shift+kp_subtract change_font_size all -2.0
 # Use kitty_mod + h/v for creating splits.
 enabled_layouts splits
 
-map kitty_mod+h launch --location=hsplit
-map kitty_mod+v launch --location=vsplit
+map kitty_mod+h launch --location=hsplit --cwd=current
+map kitty_mod+v launch --location=vsplit --cwd=current
