--- a/kitty.conf
+++ b/kitty.conf
@@ -46,13 +46,18 @@ map alt+left send_text all \x1b\x62
 map alt+right send_text all \x1b\x66
 
 # Switch focus to the neighboring window in the indicated direction
-map kitty_mod+left neighboring_window left
-map kitty_mod+right neighboring_window right
-map kitty_mod+up neighboring_window up
-map kitty_mod+down neighboring_window down
+# vim bindings
+map kitty_mod+h neighboring_window left
+map kitty_mod+l neighboring_window right
+map kitty_mod+k neighboring_window up
+map kitty_mod+j neighboring_window down
+
+# Other window management such as detaching
+map kitty_mod+up detach_window new-tab
+map kitty_mod+down detach_window 
 
 # clear the terminal screen
-map kitty_mod+k combine : clear_terminal scrollback active : send_text normal,application \x0c
+map kitty_mod+c combine : clear_terminal scrollback active : send_text normal,application \x0c
 
 # More tab management
 map ctrl+tab next_tab
@@ -80,5 +85,5 @@ map ctrl+shift+kp_subtract change_font_size all -2.0
 # Use kitty_mod + h/v for creating splits.
 enabled_layouts splits
 
-map kitty_mod+h launch --location=hsplit --cwd=current
-map kitty_mod+v launch --location=vsplit --cwd=current
+map kitty_mod+, launch --location=hsplit --cwd=current
+map kitty_mod+. launch --location=vsplit --cwd=current
