--- a/kitty.conf
+++ b/kitty.conf
@@ -29,8 +29,6 @@ inactive_tab_foreground #1d1402
 inactive_tab_background #815a09
 
 map kitty_mod+y set_tab_title
-map kitty_mod+v paste_from_clipboard
-map kitty_mod+s paste_from_selection
 map kitty_mod+o pass_selection_to_program
 map kitty_mod+r start_resizing_window
 
@@ -47,14 +45,14 @@ map alt+right send_text all \x1b\x66
 
 # Switch focus to the neighboring window in the indicated direction
 # vim bindings
-map kitty_mod+h neighboring_window left
-map kitty_mod+l neighboring_window right
-map kitty_mod+k neighboring_window up
-map kitty_mod+j neighboring_window down
+map kitty_mod+left neighboring_window left
+map kitty_mod+right neighboring_window right
+map kitty_mod+up neighboring_window up
+map kitty_mod+down neighboring_window down
 
 # Other window management such as detaching
-map kitty_mod+up detach_window new-tab
-map kitty_mod+down detach_window 
+# map kitty_mod+d detach_window # I personally don't detach into a new window.
+map kitty_mod+d detach_window new-tab
 
 # clear the terminal screen
 map kitty_mod+c combine : clear_terminal scrollback active : send_text normal,application \x0c
@@ -63,8 +61,8 @@ map kitty_mod+c combine : clear_terminal scrollback active : send_text normal,ap
 map ctrl+tab next_tab
 map ctrl+shift+tab previous_tab
 
-map ctrl+shift+right next_tab
-map ctrl+shift+left previous_tab
+map ctrl+shift+] next_tab
+map ctrl+shift+[ previous_tab
 
 map kitty_mod+1 goto_tab 1
 map kitty_mod+2 goto_tab 2
@@ -85,5 +83,5 @@ map ctrl+shift+kp_subtract change_font_size all -2.0
 # Use kitty_mod + h/v for creating splits.
 enabled_layouts splits
 
-map kitty_mod+, launch --location=hsplit --cwd=current
-map kitty_mod+. launch --location=vsplit --cwd=current
+map kitty_mod+h launch --location=hsplit --cwd=current
+map kitty_mod+v launch --location=vsplit --cwd=current
